feat(metrics): get equipments by entity for EP domain (#53)
* feat(metrics): get equipments by entity for EP domain

* add tests
* update openapi.yaml
* refacto MetricsDatabaseReader

#47
