# src/main/java/com/provoly/metrics/MetricsController.java
@@ -5,6 +5,8 @@ import jakarta.ws.rs.core.MediaType;
 
 import io.quarkus.security.Authenticated;
 
+import org.jboss.resteasy.reactive.RestQuery;
+
 @Path("/metrics")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
@@ -21,5 +23,12 @@ public class MetricsController {
     @Authenticated
     public EquipmentWithEventsDto getEquipmentWithEvent() {
         return metricsService.getEquipmentsWithEventMetrics();
+    }
+
+    @Path("/equipments-by-entity")
+    @GET
+    @Authenticated
+    public EquipmentByEntityDto getEquipmentByEntity(@RestQuery String family) {
+        return metricsService.getEquipmentByEntity(family);
     }
 }
